--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Blog Site of Andasan's Travels",
   "main": "app.js",
   "scripts": {
-    "start": "env-cmd -f ./config/dev.env nodemon app.js",
+    "dev": "concurrently --names \"server\" \"npm run server --silent\" ",
+    "server": "env-cmd -f ./config/dev.env nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +15,7 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "concurrently": "^5.0.2",
     "body-parser": "^1.19.0",
     "ckeditor": "^4.12.1",
     "ejs": "^3.0.1",
