--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
-    "concurrently": "^5.0.2",
     "body-parser": "^1.19.0",
     "ckeditor": "^4.12.1",
+    "concurrently": "^5.0.2",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.0.1",
     "env-cmd": "^10.0.1",
     "express": "^4.17.1",
