--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Blog Site of Andasan's Travels",
   "main": "app.js",
   "scripts": {
-    "dev": "concurrently --names \"server\" \"npm run server --silent\" ",
+    "start": "concurrently --names \"server\" \"npm run server --silent\" ",
     "server": "env-cmd -f ./config/dev.env nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
