--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Blog Site of Andasan's Travels",
   "main": "app.js",
   "scripts": {
-    "start": "concurrently --names \"server\" \"npm run server --silent\" ",
-    "server": "env-cmd -f ./config/dev.env nodemon app.js",
+    "start": "env-cmd -f ./config/dev.env nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,7 +16,6 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ckeditor": "^4.12.1",
-    "concurrently": "^5.0.2",
     "connect-flash": "^0.1.1",
     "ejs": "^3.0.1",
     "env-cmd": "^10.0.1",
