--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Blog Site of Andasan's Travels",
   "main": "app.js",
   "scripts": {
-    "start": "env-cmd -f ./config/dev.env nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
